SDI-2021-113-sesión3-Ejercicio-complementario2

--- a/sdi2021-113-spring/src/main/resources/messages.properties
+++ b/sdi2021-113-spring/src/main/resources/messages.properties
@@ -1,13 +1,32 @@
 welcome.message=Bienvenidos a la página principal 
-language.change= Idioma
-language.en=English
-language.es=Spanish
-login.message=Identifícate 
-signup.message=Regístrate
-Error.empty= Este campo no puede ser vacío
-Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres. 
-Error.signup.dni.duplicate=Este DNI ya existe.
-Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres. 
-Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres. 
-Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
-Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.
+welcome.home=Página principal
+marks.managing=Gestión de notas
+users.managing=Gestion de usuarios
+
+language.change=Idioma
+language.en=Inglés
+language.es=Español
+language.jp=Japonés
+
+signup.message=Regístrate como usuario
+signup.title=Registro
+signup.dni=DNI
+signup.name=Nombre
+signup.lastName=Apellidos
+signup.password=Contraseña
+signup.passwordConfirm=Repita la contraseña
+signup.send=Enviar
+
+login.message=Identifícate
+login.title=Iniciar sesión
+login.dni=DNI
+login.password=Contraseña
+login.send=Enviar
+
+Error.empty=Este campo no puede estar vacío.
+Error.signup.dni.length=La longitud de este campo debe ser de 9 caracteres.
+Error.signup.dni.duplicate=Este DNI ya está registrado.
+Error.signup.name.length=La longitud del nombre debe estar entre 5 y 24 caracteres. 
+Error.signup.lastName.length=La longitud del apellido debe estar entre 5 y 24 caracteres. 
+Error.signup.password.length=La contraseña debe tener entre 5 y 24 caracteres.
+Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.  
