--- a/sdi2021-113-spring/src/main/resources/messages_en.properties
+++ b/sdi2021-113-spring/src/main/resources/messages_en.properties
@@ -1,13 +1,38 @@
 welcome.message=Welcome to homepage 
+welcome.home=Home
+
+marks.managing=Manage marks
+marks.add=Add a mark
+marks.list=List marks
+
+users.managing=Manage users
+users.add=Add a user
+users.list=List users
+
 language.change=Language 
 language.en=English 
 language.es=Spanish 
-login.message=Log In 
+language.jp=Japanese
+
 signup.message=Sign Up
-Error.empty= This field is required.
-Error.signup.dni.length=The DNI must have between 5 and 24 characters. 
-Error.signup.dni.duplicate=This DNI already exist.
-Error.signup.name.length=The name must have between 5 and 24 characters. 
-Error.signup.lastName.length=The last name must have between 5 and 24 characters. 
-Error.signup.password.length = The password must have between 5 and 24 characters.
-Error.signup.passwordConfirm.coincidence=These passwords don't match.
+signup.title=Signup as a user
+signup.dni=DNI
+signup.name=Name
+signup.lastName=Last name
+signup.password=Password
+signup.passwordConfirm=Repeat password
+signup.send=Send
+
+login.message=Access your account
+login.title=Log In
+login.dni=DNI
+login.password=Password
+login.send=Send
+
+Error.empty= This field cannot be empty.
+Error.signup.dni.length= The DNI must have between 5 and 24 characters. 
+Error.signup.dni.duplicate= This DNI already exists.
+Error.signup.name.length= The name must have between 5 and 24 characters. 
+Error.signup.lastName.length= The last name must have between 5 and 24 characters. 
+Error.signup.password.length= The password must have between 5 and 24 characters.
+Error.signup.passwordConfirm.coincidence= These passwords don't match.
