SDI-2021-113-sesión3-Ejercicio-complementario3

--- a/sdi2021-113-spring/src/main/resources/messages_en.properties
+++ b/sdi2021-113-spring/src/main/resources/messages_en.properties
@@ -36,3 +36,6 @@ Error.signup.name.length= The name must have between 5 and 24 characters.
 Error.signup.lastName.length= The last name must have between 5 and 24 characters. 
 Error.signup.password.length= The password must have between 5 and 24 characters.
 Error.signup.passwordConfirm.coincidence= These passwords don't match.
+Error.score.value=Score is not within valid range
+Error.mark.description.length=Description must exceed maximun length
+Error.signup.categoria.length=Category must contain more characters.
