--- a/sdi2021-113-spring/src/main/resources/messages_es.properties
+++ b/sdi2021-113-spring/src/main/resources/messages_es.properties
@@ -29,4 +29,7 @@ Error.signup.dni.duplicate=Este DNI ya está registrado.
 Error.signup.name.length=La longitud del nombre debe estar entre 5 y 24 caracteres. 
 Error.signup.lastName.length=La longitud del apellido debe estar entre 5 y 24 caracteres. 
 Error.signup.password.length=La contraseña debe tener entre 5 y 24 caracteres.
-Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden. 
+Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.
+Error.score.value=La puntuación no está dentro del rango válido
+Error.mark.description.length=La descripción debe superar la longitud mínima
+Error.signup.categoria.length=La categoría debe tener más caracteres.
