--- a/sdi2021-113-spring/src/main/resources/messages_jp.properties
+++ b/sdi2021-113-spring/src/main/resources/messages_jp.properties
@@ -30,3 +30,6 @@ Error.signup.name.length=名前は5〜24文字である必要があります。
 Error.signup.lastName.length=姓は5〜24文字である必要があります。
 Error.signup.password.length=パスワードは5〜24文字である必要があります。
 Error.signup.passwordConfirm.coincidence=パスワードが一致しません。
+Error.score.value=スコアが有効範囲内にありません
+Error.mark.description.length=説明は最大長を超えている必要があります
+Error.signup.categoria.length=カテゴリにはより多くの文字を含める必要があります
