--- a/sdi2021-113-spring/src/main/resources/messages.properties
+++ b/sdi2021-113-spring/src/main/resources/messages.properties
@@ -30,3 +30,6 @@ Error.signup.name.length=La longitud del nombre debe estar entre 5 y 24 caracter
 Error.signup.lastName.length=La longitud del apellido debe estar entre 5 y 24 caracteres. 
 Error.signup.password.length=La contraseña debe tener entre 5 y 24 caracteres.
 Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.  
+Error.score.value=La puntuación no está dentro del rango válido
+Error.mark.description.length=La descripción debe superar la longitud mínima
+Error.signup.categoria.length=La categoría debe tener más caracteres.
